--- a/catalog/static/catalog/scss/blocks/_catalog.scss
+++ b/catalog/static/catalog/scss/blocks/_catalog.scss
@@ -47,8 +47,9 @@
         justify-content: space-between;
 
         p {
-            font-size: 1rem;
+            font-size: 0.8rem;
             padding-right: 1rem;
+            margin: 0;
         }
     }
 }
